--- a/tmux_scripts/one_drone/session.yml
+++ b/tmux_scripts/one_drone/session.yml
@@ -1,6 +1,6 @@
 name: simulation
 root: ./
-startup_window: status
+startup_window: pathfinder
 pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=f450; export ODOMETRY_TYPE=gps; export WORLD_NAME=simulation_local; export SENSORS="garmin_down"
 windows:
   - roscore:
@@ -24,6 +24,11 @@ windows:
       layout: tiled
       panes:
         - waitForOdometry; roslaunch octomap_server octomap_server.launch
+  - pathfinder:
+      layout: tiled
+      panes:
+        - waitForOdometry; roslaunch pathfinder pathfinder.launch
+        - 'history -s rosservice call /$UAV_NAME/pathfinder/goto \"[0,0,0,0]\"'
   - bumper:
       layout: tiled
       panes:
@@ -40,10 +45,6 @@ windows:
           rosservice call /$UAV_NAME/mavros/cmd/arming 1;
           sleep 2;
           rosservice call /$UAV_NAME/mavros/set_mode 0 offboard'
-  - pathfinder:
-      layout: tiled
-      panes:
-        - 'history -s roslaunch pathfinder pathfinder.launch'
   - goto:
       layout: tiled
       panes:
