--- a/tmux_scripts/one_drone/session.yml
+++ b/tmux_scripts/one_drone/session.yml
@@ -28,7 +28,7 @@ windows:
       layout: tiled
       panes:
         - waitForOdometry; roslaunch pathfinder pathfinder.launch
-        - 'history -s rosservice call /$UAV_NAME/pathfinder/goto \"[0,0,0,0]\"'
+        - 'history -s rosservice call /$UAV_NAME/pathfinder/goto \"goal: \[0.0, 10.0, 1.5, 0.0\]\"'
   - bumper:
       layout: tiled
       panes:
