--- a/config/pathfinder.yaml
+++ b/config/pathfinder.yaml
@@ -1,11 +1,11 @@
 # planning
 euclidean_distance_cutoff: 4.0 # [m]
-clearing_radius: 0.4 # [m]
 safe_obstacle_distance: 1.0 # [m]
 navigation_tolerance: 0.3 # [m]
 explore_unknown_threshold: 6.0 # [m] distance between a cell and a goal through unknown space
 distance_penalty: 0.5
 greedy_penalty: 1.0
+planning_tree_resolution: 0.4 # [m] voxel edge size
 unknown_is_occupied: false
 
 # visualization
