--- a/tmux_scripts/one_drone/session.yml
+++ b/tmux_scripts/one_drone/session.yml
@@ -23,7 +23,7 @@ windows:
   - mapping:
       layout: tiled
       panes:
-        - waitForOdometry; roslaunch octomap_server octomap_server.launch
+        - waitForControl; roslaunch octomap_server octomap_server.launch
   - pathfinder:
       layout: tiled
       panes:
