--- a/config/pathfinder.yaml
+++ b/config/pathfinder.yaml
@@ -4,6 +4,7 @@ safe_obstacle_distance: 1.5 # [m]
 explore_unknown_threshold: 6.0 # [m] distance between a cell and a goal through unknown space
 distance_penalty: 0.5
 greedy_penalty: 1.0
+navigation_tolerance: 0.4 # [m]
 planning_tree_resolution: 0.2 # [m] voxel edge size
 unknown_is_occupied: false
 
