--- a/config/pathfinder.yaml
+++ b/config/pathfinder.yaml
@@ -1,11 +1,13 @@
 # planning
 euclidean_distance_cutoff: 2.0 # [m]
-safe_obstacle_distance: 1.5 # [m]
+safe_obstacle_distance: 1.2 # [m]
 explore_unknown_threshold: 6.0 # [m] distance between a cell and a goal through unknown space
 distance_penalty: 0.5
 greedy_penalty: 1.0
 navigation_tolerance: 0.4 # [m]
-planning_tree_resolution: 0.2 # [m] voxel edge size
+planning_tree_resolution: 0.4 # [m] voxel edge size
+timeout_threshold: 1.0 # [s]
+max_waypoint_distance: 4.0 # [m]
 unknown_is_occupied: false
 
 # visualization
