--- a/package.xml
+++ b/package.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0"?>
 <package format="2">
+
   <name>pathfinder</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>The pathfinder package</description>
 
   <maintainer email="stibipet@fel.cvut.cz">Petr Stibinger</maintainer>
+  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
 
-  <license>GPLv3</license>
+  <license>BSD 3-Clause</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-  
+
   <depend>roscpp</depend>
+  <depend>nodelet</depend>
   <depend>std_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>mrs_lib</depend>
   <depend>mrs_msgs</depend>
   <depend>octomap</depend>
   <depend>octomap_msgs</depend>
-  
+
   <export>
+    <nodelet plugin="${prefix}/nodelets.xml" />
   </export>
+
 </package>
