--- a/config/pathfinder.yaml
+++ b/config/pathfinder.yaml
@@ -3,15 +3,16 @@ main_timer:
   rate: 20.0 # [Hz]
 
 # planning
+planning_tree_resolution: 0.4 # [m] voxel edge size
+
 euclidean_distance_cutoff: 1.2 # [m]
-safe_obstacle_distance: 1.0 # [m]
-distance_penalty: 0.5
+safe_obstacle_distance: 1.5 # [m]
+distance_penalty: 1.0
 greedy_penalty: 1.0
 endpoint_tolerance: 1.0 # [m]
-planning_tree_resolution: 0.4 # [m] voxel edge size
-max_waypoint_distance: 4.0 # [m]
+max_waypoint_distance: 1.0 # [m]
 min_altitude: 0.9 # [m]
-unknown_is_occupied: false
+unknown_is_occupied: true
 replan_after: 1.0 # [s]
 
 timeout_threshold: 2.0 # [s]
