--- a/config/pathfinder.yaml
+++ b/config/pathfinder.yaml
@@ -7,12 +7,12 @@ planning_tree_resolution: 1.00 # [m] voxel edge size
 
 euclidean_distance_cutoff: 1.2 # [m]
 safe_obstacle_distance: 1.5 # [m]
-distance_penalty: 0.5
+distance_penalty: 1.0
 greedy_penalty: 1.0
 endpoint_tolerance: 1.0 # [m]
 max_waypoint_distance: 1.0 # [m]
 min_altitude: 0.9 # [m]
-unknown_is_occupied: true
+unknown_is_occupied: false
 replan_after: 1.0 # [s]
 
 timeout_threshold: 2.0 # [s]
