--- a/config/pathfinder.yaml
+++ b/config/pathfinder.yaml
@@ -12,7 +12,7 @@ safe_obstacle_distance: 1.5 # [m]
 distance_penalty: 1.0
 greedy_penalty: 1.0
 endpoint_tolerance: 2.0 # [m]
-max_waypoint_distance: 1.0 # [m]
+max_waypoint_distance: 3.0 # [m] // or set negative for no padding
 min_altitude: 0.9 # [m]
 unknown_is_occupied: false
 replan_after: 1.0 # [s]
