--- a/config/pathfinder.yaml
+++ b/config/pathfinder.yaml
@@ -7,8 +7,10 @@ diagnostics_timer:
 future_check_timer:
   rate: 10.0 # [Hz]
 
-planning_tree_fractor: 3 # [-]
-map_resolution: 0.05 # [m] voxel edge size
+# the planner will integrate local maps into a global map
+global_map:
+  resolution: 0.05 # [m] voxel edge size
+  fractor: 3 # [-]
 
 euclidean_distance_cutoff: 1.0 # [m]
 safe_obstacle_distance: 1.0 # [m]
