--- a/config/pathfinder.yaml
+++ b/config/pathfinder.yaml
@@ -10,7 +10,7 @@ future_check_timer:
 # the planner will integrate local maps into a global map
 global_map:
   resolution: 0.05 # [m] voxel edge size
-  fractor: 3 # [-]
+  fractor: 2 # [-]
 
 euclidean_distance_cutoff: 1.0 # [m]
 safe_obstacle_distance: 1.0 # [m]
@@ -19,14 +19,22 @@ distance_penalty: 1.0
 greedy_penalty: 1.0
 
 max_waypoint_distance: 0.0 # [m] // or set negative for no padding
-min_altitude: -1000.0 # [m]
-max_altitude: 1000.0 # [m]
-unknown_is_occupied: false
+min_altitude: -6.0 # [m]
+max_altitude: 5.0 # [m]
+unknown_is_occupied: true
 replan_after: 1.0 # [s]
 
-timeout_threshold: 1.5 # [s]
+timeout_threshold: 1.5 # [s] - minimum time allowed for planning 
 time_for_trajectory_generator: 0.3 # [s]
 
+subt_planner: 
+  use: false
+  make_path_straight: true
+  apply_postprocessing: false
+  debug_info: false
+  clearing_dist: 1.0
+
+
 # visualization
-points_scale: 0.22
+points_scale: 0.16
 lines_scale: 0.02
