--- a/config/octomap_planner.yaml
+++ b/config/octomap_planner.yaml
@@ -38,36 +38,36 @@ trajectory_generator:
   input_trajectory_length: 12.0 # [s] (the rest of path will be ignored during trajectory generation)
   relax_heading: false # if true, constraints on heading dynamics are ignored during trajectory generation process
   use_heading: true # if false heading is ignored during trajectory tracking
-  heading_offset: 0.0 # [rad] offset of desired heading to direction of flight 
-  turn_in_flight_direction: true # sample heading reference in direction of flight 
+  heading_offset: 0.0 # [rad] offset of desired heading to direction of flight
+  turn_in_flight_direction: true # sample heading reference in direction of flight
   max_segment_length_heading: 1.0 # [m] maximum length of segment for heading sampling
 
-subt_planner: 
+subt_planner:
   use: true
-  apply_postprocessing: true
-  make_path_straight: false # cannot be applied if postprocessing is active
+  apply_postprocessing: false
+  make_path_straight: true # cannot be applied if postprocessing is active
   debug_info: false
   clearing_dist: 0.15 # [m] clear occupied and unknown space up to this distance from the starting position, might cause collision if greater than min_path_length
   admissibility: 1.0 # allows paths of length up to (admissibility * optimum length)
 
   apply_pruning: true
   pruning_dist: 0.6
-  
-  planning_tree: 
-    bounding_box: 
+
+  planning_tree:
+    bounding_box:
       horizontal: 60.0 # (m)
       vertical: 30.0 # (m)
 
-  postprocessing: 
-    timeout: 0.05 # (s) 
-    path_length: -1.0 # (m) length of subpath that is passed to postprocessing (set negativ number to process whole path)  
+  postprocessing:
+    timeout: 0.05 # (s)
+    path_length: -1.0 # (m) length of subpath that is passed to postprocessing (set negativ number to process whole path)
     safe_dist: 2.5 # (m)
     max_iteration: 5
     horizontal_neighbors_only: true
     z_diff_tolerance: 0.5 # (m)
     fix_goal_point: true
 
-  shortening: 
+  shortening:
     window_size: 20
     distance: 1.0 # (m)
 
