--- a/config/octomap_planner.yaml
+++ b/config/octomap_planner.yaml
@@ -36,7 +36,7 @@ min_allowed_trajectory_points_after_crop: 10 # [-] when future trajectory approa
 
 trajectory_generator:
   input_trajectory_length: 12.0 # [s] (the rest of path will be ignored during trajectory generation)
-  relax_heading: false # if true, constraints on heading dynamics are ignored during trajectory generation process
+  relax_heading: true # if true, constraints on heading dynamics are ignored during trajectory generation process
   use_heading: true # if false heading is ignored during trajectory tracking
   heading_offset: 0.0 # [rad] offset of desired heading to direction of flight
   turn_in_flight_direction: true # sample heading reference in direction of flight
