--- a/config/octomap_planner.yaml
+++ b/config/octomap_planner.yaml
@@ -71,6 +71,9 @@ subt_planner:
     window_size: 20
     distance: 1.0 # [m]
 
+  remove_obsolete_points: true
+  obsolete_points_tolerance: 0.05
+
 # visualization
 points_scale: 0.05
 lines_scale: 0.02
