--- a/config/octomap_planner.yaml
+++ b/config/octomap_planner.yaml
@@ -19,6 +19,8 @@ safe_obstacle_distance:
 goal_reached_dist: 0.8 # [m] distance from current position within which the goal is considered to be reached 
 min_path_length: 0.4 # [m] minimum length of path to be published
 max_attempts_to_replan: 2 # [-] maximum number of attempts to replan when a path is not found
+min_dist_to_goal_improvement: 1.0 # [m] minimum improvement in distance of final waypoint of the path to user goal in two consecutive replanning steps
+max_goal_dist_to_disable_replanning: 5.0 # [m] maximum distance for which the replanning can be disabled when there is a risk of oscillations (set to zero to disable mitigation of oscillations)
 
 distance_penalty: 1.0 # coefficient for traveled distance from start in A* cost function
 greedy_penalty: 1.0 # coefficient for estimated distance to goal in A* cost function
